fixed all(?) known bugs. The first year of the slider is now programmatic, based upon the first year of the user's data. The slider changing now changes image in the tracks component, and if a track was playing when the year changes, that track stops playing. The artists rendering is now using useRef, cannot overlap or incorrectly render. And biggest of all, the original three components now receive the sql data after its uploaded without having to reload the site (I had simply missed implementing that logic, had only implemented the logic for tying them to that data when pulling it from dexie...though it would be simpler still to make those one in the same.)

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -468,7 +468,7 @@ background: rgb(0, 133, 255);
   h3 {
     font-family: $font-family-header;
     font-weight: 800;
-    margin-top: 3em;
+    margin-top: 1em;
     margin-bottom: 1em;
     font-size: 60px;
     background: $white;
